--- a/src/main/webapp/pages/admin/users/update-user.xhtml
+++ b/src/main/webapp/pages/admin/users/update-user.xhtml
@@ -6,7 +6,9 @@
     xmlns:m="http://java.sun.com/jsf/composite/component/common">  
 
     	<p:dialog header="Update user" widgetVar="updateUserDialog" 
-    	          dynamic="true" modal="true" showEffect="fade" hideEffect="fade">
+    	          dynamic="true" modal="true" showEffect="fade" 
+    	          hideEffect="fade">
+    	<p:ajax event="close" listener="#{usersController.handleClose}"/>
 	    <h:form id="update" styleClass="stdform">
                 <h:panelGrid columns="1">
                 <h3 class="subtitle">E-mail</h3>
