--- a/src/main/webapp/pages/admin/permission-category/create-category.xhtml
+++ b/src/main/webapp/pages/admin/permission-category/create-category.xhtml
@@ -7,6 +7,7 @@
 
     	<p:dialog header="Create permission category" widgetVar="categoryWidget" 
     	          dynamic="true" modal="true" showEffect="fade" hideEffect="fade">
+    	<p:ajax event="close" listener="#{authRolePermissionCategoryController.handleClose}"/>
 	    <h:form id="create" styleClass="stdform">
                 <h:panelGrid columns="1">
                 <h3 class="subtitle">Permission category name</h3>
