--- a/src/main/webapp/pages/admin/users/users.xhtml
+++ b/src/main/webapp/pages/admin/users/users.xhtml
@@ -66,7 +66,9 @@
                                     userName="#{usersController.user.userName}"
                                     lastName="#{usersController.user.lastName}" 
                                     password="#{usersController.user.password}" 
-                                    registerAction="#{usersController.register()}" update=":users-form"/>
+                                    registerAction="#{usersController.register()}" 
+                                    update=":users-form"
+                                    />
             </ui:define>
         </ui:composition>
     </h:body>
