Add roles to users

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -46,7 +46,7 @@
                 <m:userRegistration id="createUser" 
                 					email="#{registrationController.data.email}" 
                 					firstName="#{registrationController.data.firstName}" 
-                                    userName="#{registrationController.data.username}"
+                                    userName="#{registrationController.data.userName}"
                                     lastName="#{registrationController.data.lastName}" 
                                     password="#{registrationController.data.password}" 
                                     registerAction="#{registrationController.register()}" 
