--- a/src/main/webapp/pages/admin/users/users.xhtml
+++ b/src/main/webapp/pages/admin/users/users.xhtml
@@ -68,6 +68,8 @@
                                     password="#{usersController.user.password}" 
                                     registerAction="#{usersController.register()}" 
                                     update=":users-form"
+                                    isRoleChooserEnabled="true" roleConverter="#{usersController.rolesConverter}"
+                                    roleDataSet="#{usersController.roles}" selectedRoles="#{usersController.selectedRoles}"
                                     />
             </ui:define>
         </ui:composition>
